service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visio-conf-service
  labels:
    app: visio-conf
    component: app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: visio-conf
    component: app
---
apiVersion: v1
kind: Service
metadata:
  name: visio-conf-headless
  labels:
    app: visio-conf
    component: app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: http
    port: 3001
    targetPort: http
    protocol: TCP
  selector:
    app: visio-conf
    component: app
